--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,31 +1,35 @@
 .navbar {
   width: 100%;
-  height: 20rem;
-  background: rgb(0, 0, 0);
+  height: 4rem;
+  background: #000;
   display: flex;
   justify-content: center;
 }
+.img{
+  border-radius: 50%;
+}
+
 .links {
   width: 100%;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  align-items: flex-start;
+  align-items: center;
 }
 .links a {
-  margin-left: 1.7rem;
-  margin-top: 1rem;
+  margin-left: 2rem;
+  margin-top: 12px;
   color: rgb(213, 16, 16);
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  letter-spacing: 1rem;
-  font-size: 30px;
-  padding: 20px;
+  letter-spacing: 0.7rem;
+  font-size: 1.5rem;
+  padding: 2px;
 }
 .links a:hover {
-  background: rgba(99, 99, 99, 0.3);
-  border-radius: 18px;
+  background: rgba(207, 89, 89, 0.542);
+  border-radius: 3rem;
+  transition: ease-in 0.5s;
 }
-
